[tool.poetry]
name = "pydase_client"
version = "0.1.0"
description = "Slim client package for connecting to pydase services."
authors = ["Mose Mueller <mosemueller@gmail.com>"]
readme = "README.md"
packages = [{include = "pydase_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = {extras = ["client", "asyncio-client"], version = "^5.11.3"}
pint = {version = "^0.24", optional = true}

[tool.poetry.extras]
units = ["pint"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pyright = "^1.1.323"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310" # Always generate Python 3.10-compatible code
extend-exclude = [
  "docs", "frontend"
]

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "C901",  # mccabe complex-structure
    "E",     # pycodestyle errors
    "ERA",   # eradicate
    "F",     # pyflakes
    "FLY",   # flynt
    "G",     # flake8-logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "NPY",   # NumPy-specific rules
    "PERF",  # perflint
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "W",     # pycodestyle warnings
]
ignore = [
    "RUF006",  # asyncio-dangling-task
    "PERF203",  # try-except-in-loop
]

[tool.ruff.lint.mccabe]
max-complexity = 7


[tool.pyright]
include = ["src/pydase_client"]
typeCheckingMode = "basic"


[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
ignore_missing_imports = false
